--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Details.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Details.cshtml
@@ -11,7 +11,7 @@
 </div>
 
 <div class="display-area">
-    @Html.DisplayFor(m => m.Content)
+    @Model.Content.ToSafeMarkdown()
 </div>
 
 <div class="display-actions">
